--- a/index.html
+++ b/index.html
@@ -1,144 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zomato-page</title>
-    <link rel = "stylesheet" href="style.css">
-    <link rel = "icon" href="https://b.zmtcdn.com/images/logo/zomato_logo_2017.png">
+    <link rel="shortcut icon" href="https://b.zmtcdn.com/images/logo/zomato_logo_2017.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
+
 <body>
-    
+    <!-- HEADER -->
     <header>
         <div class="nav">
             <div>
-                <p>Get the app</p>
+                <p>Get the App</p>
             </div>
-            <div>
-                <ul class="nav-bar">
-        <li>Add restaurant</li>
-        <li>Log in</li>
-        <li>Sign up</li>
+            <ul class="nav-bar">
+                <li>Add Restaurant</li>
+                <li>log in</li>
+                <li>sign up</li>
             </ul>
         </div>
-        </div>
-   
-    <div class ="head">
-        <img class="logo" src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png" alt="">
-    <h3>Discover the best food and drinks in Delhi NCR</h3>
-    <div class="search">
-    <div class="search-item">
-        <i class="fas fa-map-marker-alt"></i>
-        <p>YCWQ, 1, Ashoka road, Hanu</p>
-    </div>
-    <div class="search-item">
-        <i class="fas fa-search"></i>
-    <input type="search" placeholder="search for restaurant">
-
-    </div>
-    </div>
-    </div>
-    <div class="header-image">
-        <img src="https://b zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="">
-    </div>
-</header>
-<section class="section-1">
-    <div class="section-1-item">
-        <div class="items-details">
-            <p>Order Food Online</p>
-        </div>
-        <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*"
-            alt="">
-    </div>
-    <div class="section-1-item">
-        <div class="items-details">
-            <p>Dining Out</p>
-        </div>
-        <img src="https://b.zmtcdn.com/webFrontend/d026b357feb0d63c997549f6398da8cc1647364915.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*"
-            alt="">
-    </div>
-    <div class="section-1-item">
-        <div class="items-details">
-            <p>Nightlife & Club</p>
-        </div>
-        <img src="https://b.zmtcdn.com/webFrontend/d9d80ef91cb552e3fdfadb3d4f4379761647365057.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*
-                    " alt="">
-    </div>
-</section>
-<section class="section-2">
-    <div class="section-2-heading">
-        <p>Popular Localities in around the Delhi NCR</p>
-    </div>
-    <div class="section-2-container">
-        <div class="section-2-items">
-            <div class="section-2-item">
-                <p class="item-head">Cannaught Place</p>
-                <p class="item-subhead">390 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">Nehru Place</p>
-                <p class="item-subhead">458 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">Janakpuri</p>
-                <p class="item-subhead">388 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">NSP</p>
-                <p class="item-subhead">100 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head"> Janakpuri</p>
-                <p class="item-subhead">200 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">Cannaught Place</p>
-                <p class="item-subhead">388 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">Cannaught Place</p>
-                <p class="item-subhead">388 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">Cannaught Place</p>
-                <p class="item-subhead">388 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">Cannaught Place</p>
-                <p class="item-subhead">388 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">Cannaught Place</p>
-                <p class="item-subhead">388 Places</p>
-
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">Cannaught Place</p>
-                <p class="item-subhead">388 Places</p>
-            </div>
-            <div class="section-2-item">
-                <p class="item-head">Cannaught Place</p>
-                <p class="item-subhead">388 Places</p>
+        <div class="head">
+            <img class="logo" src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png"
+                alt="">
+            <h3>Discover the best food and drinks in Delhi NCR</h3>
+            <div class="search">
+                <div class="search-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>YCWQ, 1, Ashoka road, Hanu</p>
+                </div>
+                <div class="search-item">
+                    <i class="fas fa-search"></i>
+                    <input type="text" placeholder="Seach for a restaurant, cuisine or a dish">
+                </div>
             </div>
         </div>
-    </div>
-</section>
+        <div class="header-image">
+            <img src="https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="">
+        </div>
+    </header>
+    <!-- SECTION 1 -->
+    <section class="section-1">
+        <div class="section-1-item">
+            <div class="items-details">
+                <p>Order Food Online</p>
+            </div>
+            <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*"
+                alt="">
+        </div>
+        <div class="section-1-item">
+            <div class="items-details">
+                <p>Dining Out</p>
+            </div>
+            <img src="https://b.zmtcdn.com/webFrontend/d026b357feb0d63c997549f6398da8cc1647364915.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*"
+                alt="">
+        </div>
+        <div class="section-1-item">
+            <div class="items-details">
+                <p>Nightlife & Club</p>
+            </div>
+            <img src="https://b.zmtcdn.com/webFrontend/d9d80ef91cb552e3fdfadb3d4f4379761647365057.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*
+                        " alt="">
+        </div>
+    </section>
+    <!-- Section 2 -->
+    <section class="section-2">
+        <div class="section-2-heading">
+            <p>Popular Localities in around the Delhi NCR</p>
+        </div>
+        <div class="section-2-container">
+            <div class="section-2-items">
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Places</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
-</html>
-</body>
 </html>
