--- a/index.html
+++ b/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zomato-page</title>
+    <title>Document</title>
     <link rel="shortcut icon" href="https://b.zmtcdn.com/images/logo/zomato_logo_2017.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
-
 <body>
-    <!-- HEADER -->
     <header>
         <div class="nav">
             <div>
-                <p>Get the App</p>
+                <p>
+                    Get the App
+                </p>
             </div>
             <ul class="nav-bar">
                 <li>Add Restaurant</li>
-                <li>log in</li>
-                <li>sign up</li>
+                <li>Log In</li>
+                <li> Sign up</li>
             </ul>
         </div>
         <div class="head">
             <img class="logo" src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png"
-                alt="">
-            <h3>Discover the best food and drinks in Delhi NCR</h3>
+            alt="">
+            <h3>discover the best food and drinks in delhi NCR</h3>
             <div class="search">
                 <div class="search-item">
                     <i class="fas fa-map-marker-alt"></i>
@@ -46,7 +44,6 @@
             <img src="https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="">
         </div>
     </header>
-    <!-- SECTION 1 -->
     <section class="section-1">
         <div class="section-1-item">
             <div class="items-details">
@@ -70,7 +67,7 @@
                         " alt="">
         </div>
     </section>
-    <!-- Section 2 -->
+
     <section class="section-2">
         <div class="section-2-heading">
             <p>Popular Localities in around the Delhi NCR</p>
@@ -108,8 +105,8 @@
 
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">noida</p>
+                    <p class="item-subhead">500 Places</p>
 
                 </div>
                 <div class="section-2-item">
@@ -118,18 +115,18 @@
 
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">janakpuri</p>
+                    <p class="item-subhead">210 Places</p>
 
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Rohini</p>
+                    <p class="item-subhead">300 Places</p>
 
                 </div>
                 <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">388 Places</p>
+                    <p class="item-head">Pitam pura</p>
+                    <p class="item-subhead">400 Places</p>
                 </div>
                 <div class="section-2-item">
                     <p class="item-head">Cannaught Place</p>
@@ -138,7 +135,31 @@
             </div>
         </div>
     </section>
+    <section class="section-3">
+        <div class="section-3-container">
+            <div class="section-3-img">
+                <img src="https://b.zmtcdn.com/data/o2_assets/a500ffc2ab483bc6a550aa635f4e55531648107832.png
+                " alt="">
+            </div>
+            <div class="section-3-content">
+                <p>Download the app from</p>
+                <div class="section-3-download">
+                    <img src="https://b.zmtcdn.com/data/webuikit/23e930757c3df49840c482a8638bf5c31556001144.png
+                    " alt="">
+                    <img src="https://b.zmtcdn.com/data/webuikit/9f0c85a5e33adb783fa0aef667075f9e1556003622.png" alt="">
+    
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <footer>
+       <p> By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies. All trademarks are properties of their respective owners. 2022 © Gamak Grover. All rights reserved.
+    </p>
+    </footer>
 
 </body>
 
+</html>
+</body>
 </html>
